--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <div class="left">
       <h1>A digital agency specializing on mobile design</h1>
       <p>We are an award winning design agency that strongly believes in the power of creative ideas.</p>
-      <a href="">Get Starterd</a>
+      <a class="btn-primary" href="">Get Starterd</a>
     </div>
     <div class="right">
       <img src="" alt="Hero image">
@@ -48,7 +48,6 @@
         </p>
         <a href="">Learn More</a>
       </div>
-
       <div class="item">
         <img src="" alt="">
         <h3>Web Design</h3>
@@ -56,7 +55,6 @@
         </p>
         <a href="">Learn More</a>
       </div>
-
       <div class="item">
         <img src="" alt="">
         <h3>Web Design</h3>
@@ -66,6 +64,267 @@
       </div>
     </div>
   </section>
-</body>
-
+  <section class="strategy">
+    <h2>Here are 3 working steps to organize our projects</h2>
+    <p>
+      Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna
+      mollis euismod. Nullam id dolor
+      id nibh ultricies vehicula ut id elit. Nullam quis risus eget urna mollis.
+    </p>
+    <p>
+      Nullam id dolor id nibh ultricies vehicula ut id elit. Vestibulum id ligula porta felis euismod semper. Aenean
+      lacinia bibendum nulla sed consectetur.
+    </p>
+    <a class="btn-primary" href="">Learn more</a>
+    <div class="cards-container">
+      <div class="card">
+        <div class="order">01</div>
+        <h3>Collect Ideas</h3>
+        <p>Nulla vitae elit libero pharetra augue dapibus.</p>
+      </div>
+      <div class="card">
+        <div class="order">01</div>
+        <h3>Collect Ideas</h3>
+        <p>Nulla vitae elit libero pharetra augue dapibus.</p>
+      </div>
+      <div class="card">
+        <div class="order">01</div>
+        <h3>Collect Ideas</h3>
+        <p>Nulla vitae elit libero pharetra augue dapibus.</p>
+      </div>
+    </div>
+  </section>
+  <section class="team">
+    <h2>We are proud of our design team</h2>
+    <p>Just sit back and relax while we take care of your business needs for you.</p>
+    <div class="stadistics">
+      <div class="item">
+        <img src="" alt="">
+        <h3>1000+</h3>
+        <p>Completed Projects</p>
+      </div>
+      <div class="item">
+        <img src="" alt="">
+        <h3>1000+</h3>
+        <p>Completed Projects</p>
+      </div>
+      <div class="item">
+        <img src="" alt="">
+        <h3>1000+</h3>
+        <p>Completed Projects</p>
+      </div>
+    </div>
+    <div class="team-list">
+      <div class="item">
+        <img src="" alt="">
+        <h3>Coriss Ambady</h3>
+        <p>Financial Analyst</p>
+        <p>Fermentum massa justo sit amet risus morbi leo.</p>
+        <div class="social-networks">
+          <div class="social-item">
+            <a href="">
+              <img src="" alt="">
+            </a>
+          </div>
+        </div>
+      </div>
+  </section>
+  <section class="projects">
+    <div class="project">
+      <img src="" alt="">
+      <h3>Nombre del Proyecto</h3>
+      <p>categoria</p>
+    </div>
+    <div class="project">
+      <img src="" alt="">
+      <h3>Nombre del Proyecto</h3>
+      <p>categoria</p>
+    </div>
+    <div class="project">
+      <img src="" alt="">
+      <h3>Nombre del Proyecto</h3>
+      <p>categoria</p>
+    </div>
+  </section>
+  <section class="testimonial">
+    <h2>Don't take our word for it. See what customers are saying about us.</h2>
+    <div class="list">
+      <div class="item">
+        <p>
+          “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+          euismod semper. Cras justo odio dapibus facilisis sociis natoque
+          penatibus.”
+        </p>
+        <div class="author">
+          <img src="" alt="">
+          <h3>Coriss Ambady</h3>
+          <p>Financial Analyst</p>
+        </div>
+      </div>
+      <div class="item">
+        <p>
+          “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+          euismod semper. Cras justo odio dapibus facilisis sociis natoque
+          penatibus.”
+        </p>
+        <div class="author">
+          <img src="" alt="">
+          <h3>Coriss Ambady</h3>
+          <p>Financial Analyst</p>
+        </div>
+      </div>
+      <div class="item">
+        <p>
+          “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+          euismod semper. Cras justo odio dapibus facilisis sociis natoque
+          penatibus.”
+        </p>
+        <div class="author">
+          <img src="" alt="">
+          <h3>Coriss Ambady</h3>
+          <p>Financial Analyst</p>
+        </div>
+      </div>
+      <div class="item">
+        <p>
+          “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+          euismod semper. Cras justo odio dapibus facilisis sociis natoque
+          penatibus.”
+        </p>
+        <div class="author">
+          <img src="" alt="">
+          <h3>Coriss Ambady</h3>
+          <p>Financial Analyst</p>
+        </div>
+      </div>
+      <div class="item">
+        <p>
+          “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+          euismod semper. Cras justo odio dapibus facilisis sociis natoque
+          penatibus.”
+        </p>
+        <div class="author">
+          <img src="" alt="">
+          <h3>Coriss Ambady</h3>
+          <p>Financial Analyst</p>
+        </div>
+      </div>
+      <div class="item">
+        <p>
+          “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+          euismod semper. Cras justo odio dapibus facilisis sociis natoque
+          penatibus.”
+        </p>
+        <div class="author">
+          <img src="" alt="">
+          <h3>Coriss Ambady</h3>
+          <p>Financial Analyst</p>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+    <section class="projects">
+      <div id="project">
+        <img src="" alt="">
+        <h3>Nombre del Proyecto</h3>
+        <p>Categoria</p>
+      </div>
+      <div id="project">
+        <img src="" alt="">
+        <h3>Nombre del Proyecto</h3>
+        <p>Categoria</p>
+      </div>
+<div id="project">
+        <img src="" alt="">
+        <h3>Nombre del Proyecto</h3>
+        <p>Categoria</p>
+      </div>
+    </section>
+    <section class="testimonials">
+      <h2>Don't take our word for it. See what customers are saying about us.</h2>
+      <div id="list">
+        <div class="item">
+          <p>
+            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper. Cras justo odio dapibus facilisis sociis natoque
+penatibus.”
+          </p>
+          <div class="author">
+            <img src="" alt="">
+            <h3>Coriss Ambady</h3>
+            <p>Financial Analyst</p>
+          </div>
+        </div>
+ <div class="item">
+          <p>
+            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper. Cras justo odio dapibus facilisis sociis natoque
+penatibus.”
+          </p>
+          <div class="author">
+            <img src="" alt="">
+            <h3>Coriss Ambady</h3>
+            <p>Financial Analyst</p>
+          </div>
+        </div>
+ <div class="item">
+          <p>
+            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper. Cras justo odio dapibus facilisis sociis natoque
+penatibus.”
+          </p>
+          <div class="author">
+            <img src="" alt="">
+            <h3>Coriss Ambady</h3>
+            <p>Financial Analyst</p>
+          </div>
+        </div>
+ <div class="item">
+          <p>
+            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper. Cras justo odio dapibus facilisis sociis natoque
+penatibus.”
+          </p>
+          <div class="author">
+            <img src="" alt="">
+            <h3>Coriss Ambady</h3>
+            <p>Financial Analyst</p>
+          </div>
+        </div>
+ <div class="item">
+          <p>
+            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper. Cras justo odio dapibus facilisis sociis natoque
+penatibus.”
+          </p>
+          <div class="author">
+            <img src="" alt="">
+            <h3>Coriss Ambady</h3>
+            <p>Financial Analyst</p>
+          </div>
+        </div>
+ <div class="item">
+          <p>
+            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper. Cras justo odio dapibus facilisis sociis natoque
+penatibus.”
+          </p>
+          <div class="author">
+            <img src="" alt="">
+            <h3>Coriss Ambady</h3>
+            <p>Financial Analyst</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="faq">
+      <h2>If you don't see an answer to your question, you can send us an email from our contact form.</h2>
+      <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam quis risus eget urna mollis ornare.</p>
+      <a class="btn-primary" href="">All FAQ</a>
+      <div class="list">
+        <div class="item">
+          <p>How do I get my subscription receipt?</p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <h2>Join our community by using our services and grow your business.</h2>
+      <a class="btn-primary" href="">Try It For Free</a>
+    </footer>
+    </body>
 </html>
