feat: agregando los componetes de estilos a HTML

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Proyecto Web</title>
-  <link href="css/style.css" rel="stylesheet">
+  <link href="styles/normalize.css" rel="stylesheet">
+  <link href="styles/style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -224,107 +229,115 @@
     </div>
     </div>
   </section>
-    <section class="projects">
-      <div id="project">
-        <img src="" alt="">
-        <h3>Nombre del Proyecto</h3>
-        <p>Categoria</p>
-      </div>
-      <div id="project">
-        <img src="" alt="">
-        <h3>Nombre del Proyecto</h3>
-        <p>Categoria</p>
-      </div>
-<div id="project">
-        <img src="" alt="">
-        <h3>Nombre del Proyecto</h3>
-        <p>Categoria</p>
-      </div>
-    </section>
-    <section class="testimonials">
-      <h2>Don't take our word for it. See what customers are saying about us.</h2>
-      <div id="list">
-        <div class="item">
-          <p>
-            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper. Cras justo odio dapibus facilisis sociis natoque
-penatibus.”
-          </p>
-          <div class="author">
-            <img src="" alt="">
-            <h3>Coriss Ambady</h3>
-            <p>Financial Analyst</p>
-          </div>
-        </div>
- <div class="item">
-          <p>
-            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper. Cras justo odio dapibus facilisis sociis natoque
-penatibus.”
-          </p>
-          <div class="author">
-            <img src="" alt="">
-            <h3>Coriss Ambady</h3>
-            <p>Financial Analyst</p>
-          </div>
-        </div>
- <div class="item">
-          <p>
-            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper. Cras justo odio dapibus facilisis sociis natoque
-penatibus.”
-          </p>
-          <div class="author">
-            <img src="" alt="">
-            <h3>Coriss Ambady</h3>
-            <p>Financial Analyst</p>
-          </div>
-        </div>
- <div class="item">
-          <p>
-            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper. Cras justo odio dapibus facilisis sociis natoque
-penatibus.”
-          </p>
-          <div class="author">
-            <img src="" alt="">
-            <h3>Coriss Ambady</h3>
-            <p>Financial Analyst</p>
-          </div>
-        </div>
- <div class="item">
-          <p>
-            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper. Cras justo odio dapibus facilisis sociis natoque
-penatibus.”
-          </p>
-          <div class="author">
-            <img src="" alt="">
-            <h3>Coriss Ambady</h3>
-            <p>Financial Analyst</p>
-          </div>
-        </div>
- <div class="item">
-          <p>
-            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper. Cras justo odio dapibus facilisis sociis natoque
-penatibus.”
-          </p>
-          <div class="author">
-            <img src="" alt="">
-            <h3>Coriss Ambady</h3>
-            <p>Financial Analyst</p>
-          </div>
+  <section class="projects">
+    <div id="project">
+      <img src="" alt="">
+      <h3>Nombre del Proyecto</h3>
+      <p>Categoria</p>
+    </div>
+    <div id="project">
+      <img src="" alt="">
+      <h3>Nombre del Proyecto</h3>
+      <p>Categoria</p>
+    </div>
+    <div id="project">
+      <img src="" alt="">
+      <h3>Nombre del Proyecto</h3>
+      <p>Categoria</p>
+    </div>
+  </section>
+  <section class="testimonials">
+    <h2>Don't take our word for it. See what customers are saying about us.</h2>
+    <div id="list">
+      <div class="item">
+        <p>
+          “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+          euismod semper. Cras justo odio dapibus facilisis sociis natoque
+          penatibus.”
+        </p>
+        <div class="author">
+          <img src="" alt="">
+          <h3>Coriss Ambady</h3>
+          <p>Financial Analyst</p>
         </div>
       </div>
-    </section>
-    <section class="faq">
-      <h2>If you don't see an answer to your question, you can send us an email from our contact form.</h2>
-      <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam quis risus eget urna mollis ornare.</p>
-      <a class="btn-primary" href="">All FAQ</a>
-      <div class="list">
-        <div class="item">
-          <p>How do I get my subscription receipt?</p>
+      <div class="item">
+        <p>
+          “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+          euismod semper. Cras justo odio dapibus facilisis sociis natoque
+          penatibus.”
+        </p>
+        <div class="author">
+          <img src="" alt="">
+          <h3>Coriss Ambady</h3>
+          <p>Financial Analyst</p>
         </div>
       </div>
-    </section>
-    <footer>
-      <h2>Join our community by using our services and grow your business.</h2>
-      <a class="btn-primary" href="">Try It For Free</a>
-    </footer>
-    </body>
+      <div class="item">
+        <p>
+          “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+          euismod semper. Cras justo odio dapibus facilisis sociis natoque
+          penatibus.”
+        </p>
+        <div class="author">
+          <img src="" alt="">
+          <h3>Coriss Ambady</h3>
+          <p>Financial Analyst</p>
+        </div>
+      </div>
+      <div class="item">
+        <p>
+          “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+          euismod semper. Cras justo odio dapibus facilisis sociis natoque
+          penatibus.”
+        </p>
+        <div class="author">
+          <img src="" alt="">
+          <h3>Coriss Ambady</h3>
+          <p>Financial Analyst</p>
+        </div>
+      </div>
+      <div class="item">
+        <p>
+          “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+          euismod semper. Cras justo odio dapibus facilisis sociis natoque
+          penatibus.”
+        </p>
+        <div class="author">
+          <img src="" alt="">
+          <h3>Coriss Ambady</h3>
+          <p>Financial Analyst</p>
+        </div>
+      </div>
+      <div class="item">
+        <p>
+          “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+          euismod semper. Cras justo odio dapibus facilisis sociis natoque
+          penatibus.”
+        </p>
+        <div class="author">
+          <img src="" alt="">
+          <h3>Coriss Ambady</h3>
+          <p>Financial Analyst</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="faq">
+    <h2>If you don't see an answer to your question, you can send us an email from our contact form.</h2>
+    <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam quis
+      risus eget urna mollis ornare.</p>
+    <a class="btn-primary" href="">All FAQ</a>
+    <div class="list">
+      <div class="item">
+        <p>How do I get my subscription receipt?</p>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <h2>Join our community by using our services and grow your business.</h2>
+    <a class="btn-primary" href="">Try It For Free</a>
+  </footer>
+</body>
+
 </html>
