Correcting the structure of the html file and stylesheet

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Proyecto Web</title>
-  <link href="styles/normalize.css" rel="stylesheet">
-  <link href="styles/style.css" rel="stylesheet">
+  <link href="./styles/normalize.css" rel="stylesheet">
+  <link href="./styles/style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
@@ -143,17 +143,17 @@
     </section>
     <section class="projects">
       <div class="project">
-        <img src="" alt="">
+        <img src="./assets/images/Projects/project1.jpg" alt="">
         <h3>Nombre del Proyecto</h3>
         <p>Categoria</p>
       </div>
       <div class="project">
-        <img src="" alt="">
+        <img src="./assets/images/Projects/project2.jpg" alt="">
         <h3>Nombre del Proyecto</h3>
         <p>Categoria</p>
       </div>
       <div class="project">
-        <img src="" alt="">
+        <img src="./assets/images/Projects/Project3.jpg" alt="">
         <h3>Nombre del Proyecto</h3>
         <p>Categoria</p>
       </div>
