style: add strategy-cards

--- a/src/index.html
+++ b/src/index.html
@@ -16,93 +16,113 @@
 <body>
   <main>
     <nav>
-      <div class="logo">
-        <img src="assets/images/logo.png" alt="">
+      <div class="container nav-container">
+        <div class="logo">
+          <img src="assets/images/logo.png" alt="">
+        </div>
+        <ul>
+          <li><a href="/">Demos</a></li>
+          <li><a href="/">Pages</a></li>
+          <li><a href="/">Projects</a></li>
+          <li><a href="/">Blog</a></li>
+          <li><a href="/">Blocks</a></li>
+          <li><a href="/">Documentacion</a></li>
+        </ul>
       </div>
-      <ul>
-        <li><a href="/">Demos</a></li>
-        <li><a href="/">Pages</a></li>
-        <li><a href="/">Projects</a></li>
-        <li><a href="/">Blog</a></li>
-        <li><a href="/">Blocks</a></li>
-        <li><a href="/">Documentacion</a></li>
-      </ul>
     </nav>
     <section class="hero">
-      <div class="left">
-        <h1>A digital agency specializing on <span>mobile design</span></h1>
-        <p>We are an award winning design agency that strongly believes in the power of creative ideas.</p>
-        <a class="btn-primary" href="">Get Starterd</a>
-      </div>
-      <div class="right">
-        <img src="assets/images/hero.svg" alt="Hero image">
-      </div>
-      <div class="sponsors">
-        <img src="assets/images/sponsors/c1.png" alt="">
-        <img src="assets/images/sponsors/c2.png" alt="">
-        <img src="assets/images/sponsors/c3.png" alt="">
-        <img src="assets/images/sponsors/c4.png" alt="">
-        <img src="assets/images/sponsors/c5.png" alt="">
-        <img src="assets/images/sponsors/c6.png" alt="">
-        <img src="assets/images/sponsors/c7.png" alt="">
+      <div class="container hero-container">
+        <div class="left">
+          <h1>A digital agency specializing on <span>mobile design</span></h1>
+          <p>We are an award winning design agency that strongly believes in the power of creative ideas.</p>
+          <a class="btn-primary" href="">Get Starterd</a>
+        </div>
+        <div class="right">
+          <img src="assets/images/hero.svg" alt="Hero image">
+        </div>
+        <!-- <div class="sponsors"> -->
+        <!--   <img src="assets/images/sponsors/c1.png" alt=""> -->
+        <!--   <img src="assets/images/sponsors/c2.png" alt=""> -->
+        <!--   <img src="assets/images/sponsors/c3.png" alt=""> -->
+        <!--   <img src="assets/images/sponsors/c4.png" alt=""> -->
+        <!--   <img src="assets/images/sponsors/c5.png" alt=""> -->
+        <!--   <img src="assets/images/sponsors/c6.png" alt=""> -->
+        <!--   <img src="assets/images/sponsors/c7.png" alt=""> -->
+        <!-- </div> -->
       </div>
     </section>
     <section class="services">
-      <h2>The service we offer is specifically designed to meet your needs.</h2>
-      <div class="services-list">
-        <div class="services-item">
-          <img src="assets/images/services/service1.png" alt="">
-          <h3>Web Design</h3>
-          <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget. Fusce dapibus
-            tellus.a
-          </p>
-          <a href="">Learn More</a>
-        </div>
-        <div class="services-item">
-          <img src="assets/images/services/service2.png" alt="">
-          <h3>Web Design</h3>
-          <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget. Fusce dapibus
-            tellus.a
-          </p>
-          <a href="">Learn More</a>
-        </div>
-        <div class="services-item">
-          <img src="assets/images/services/service3.png" alt="">
-          <h3>Web Design</h3>
-          <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget. Fusce dapibus
-            tellus.a
-          </p>
-          <a href="">Learn More</a>
+      <div class="container">
+        <h2>The service we offer is specifically designed to meet your needs.</h2>
+        <div class="services-list">
+          <div class="services-item">
+            <img src="assets/images/services/service1.png" alt="">
+            <h3>Web Design</h3>
+            <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget. Fusce dapibus
+              tellus.a
+            </p>
+            <a href="">Learn More</a>
+          </div>
+          <div class="services-item">
+            <img src="assets/images/services/service2.png" alt="">
+            <h3>Web Design</h3>
+            <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget. Fusce dapibus
+              tellus.a
+            </p>
+            <a href="">Learn More</a>
+          </div>
+          <div class="services-item">
+            <img src="assets/images/services/service3.png" alt="">
+            <h3>Web Design</h3>
+            <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget. Fusce dapibus
+              tellus.a
+            </p>
+            <a href="">Learn More</a>
+          </div>
         </div>
       </div>
     </section>
     <section class="strategy">
-      <h2>Here are 3 working steps to organize our projects</h2>
-      <p>
-        Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna
-        mollis euismod. Nullam id dolor
-        id nibh ultricies vehicula ut id elit. Nullam quis risus eget urna mollis.
-      </p>
-      <p>
-        Nullam id dolor id nibh ultricies vehicula ut id elit. Vestibulum id ligula porta felis euismod semper. Aenean
-        lacinia bibendum nulla sed consectetur.
-      </p>
-      <a class="btn-primary" href="">Learn more</a>
-      <div class="cards-container">
-        <div class="card">
-          <div class="order">01</div>
-          <h3>Collect Ideas</h3>
-          <p>Nulla vitae elit libero pharetra augue dapibus.</p>
+      <div class="container strategy-container">
+        <div class="left">
+          <h2>Here are 3 working steps to organize our projects</h2>
+          <p>
+            Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada
+            magna
+            mollis euismod. Nullam id dolor
+            id nibh ultricies vehicula ut id elit. Nullam quis risus eget urna mollis.
+          </p>
+          <p>
+            Nullam id dolor id nibh ultricies vehicula ut id elit. Vestibulum id ligula porta felis euismod semper.
+            Aenean
+            lacinia bibendum nulla sed consectetur.
+          </p>
+          <a class="btn-primary" href="">Learn more</a>
         </div>
-        <div class="card">
-          <div class="order">01</div>
-          <h3>Collect Ideas</h3>
-          <p>Nulla vitae elit libero pharetra augue dapibus.</p>
-        </div>
-        <div class="card">
-          <div class="order">01</div>
-          <h3>Collect Ideas</h3>
-          <p>Nulla vitae elit libero pharetra augue dapibus.</p>
+        <div class="right">
+          <div class="strategy-cards-container">
+            <div class="strategy-card">
+              <div class="order">01</div>
+              <div class="info">
+                <h3>Collect Ideas</h3>
+                <p>Nulla vitae elit libero pharetra augue dapibus.</p>
+              </div>
+            </div>
+            <div class="strategy-card">
+              <div class="order">01</div>
+              <div class="info">
+                <h3>Collect Ideas</h3>
+                <p>Nulla vitae elit libero pharetra augue dapibus.</p>
+              </div>
+            </div>
+            <div class="strategy-card">
+              <div class="order">01</div>
+              <div class="info">
+                <h3>Collect Ideas</h3>
+                <p>Nulla vitae elit libero pharetra augue dapibus.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -159,101 +179,103 @@
       </div>
     </section>
     <section class="testimonials">
-      <h2>Don't take our word for it. See what customers are saying about us.</h2>
-      <div class="testimonials-list">
-        <div class="testimonials-item">
-          <p>
-            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
-            euismod semper. Cras justo odio dapibus facilisis sociis natoque
-            penatibus.”
-          </p>
-          <div class="testimonials-author">
-            <div class="image">
-              <img src="./assets/images/team/team1.jpg" alt="">
-            </div>
-            <div class="bio">
-              <h3>Coriss Ambady</h3>
-              <p>Financial Analyst</p>
-            </div>
-          </div>
-        </div>
-        <div class="testimonials-item">
-          <p>
-            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
-            euismod semper. Cras justo odio dapibus facilisis sociis natoque
-            penatibus.”
-          </p>
-          <div class="testimonials-author">
-            <div class="image">
-              <img src="./assets/images/team/team1.jpg" alt="">
-            </div>
-            <div class="bio">
-              <h3>Coriss Ambady</h3>
-              <p>Financial Analyst</p>
+      <div class="container ">
+        <h2>Don't take our word for it. See what customers are saying about us.</h2>
+        <div class="testimonials-list">
+          <div class="testimonials-item">
+            <p>
+              “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+              euismod semper. Cras justo odio dapibus facilisis sociis natoque
+              penatibus.”
+            </p>
+            <div class="testimonials-author">
+              <div class="image">
+                <img src="./assets/images/team/team1.jpg" alt="">
+              </div>
+              <div class="bio">
+                <h3>Coriss Ambady</h3>
+                <p>Financial Analyst</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="testimonials-item">
-          <p>
-            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
-            euismod semper. Cras justo odio dapibus facilisis sociis natoque
-            penatibus.”
-          </p>
-          <div class="testimonials-author">
-            <div class="image">
-              <img src="./assets/images/team/team1.jpg" alt="">
-            </div>
-            <div class="bio">
-              <h3>Coriss Ambady</h3>
-              <p>Financial Analyst</p>
-            </div>
-          </div>
-        </div>
-        <div class="testimonials-item">
-          <p>
-            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
-            euismod semper. Cras justo odio dapibus facilisis sociis natoque
-            penatibus.”
-          </p>
-          <div class="testimonials-author">
-            <div class="image">
-              <img src="./assets/images/team/team1.jpg" alt="">
-            </div>
-            <div class="bio">
-              <h3>Coriss Ambady</h3>
-              <p>Financial Analyst</p>
+          <div class="testimonials-item">
+            <p>
+              “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+              euismod semper. Cras justo odio dapibus facilisis sociis natoque
+              penatibus.”
+            </p>
+            <div class="testimonials-author">
+              <div class="image">
+                <img src="./assets/images/team/team1.jpg" alt="">
+              </div>
+              <div class="bio">
+                <h3>Coriss Ambady</h3>
+                <p>Financial Analyst</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="testimonials-item">
-          <p>
-            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
-            euismod semper. Cras justo odio dapibus facilisis sociis natoque
-            penatibus.”
-          </p>
-          <div class="testimonials-author">
-            <div class="image">
-              <img src="./assets/images/team/team1.jpg" alt="">
-            </div>
-            <div class="bio">
-              <h3>Coriss Ambady</h3>
-              <p>Financial Analyst</p>
+          <div class="testimonials-item">
+            <p>
+              “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+              euismod semper. Cras justo odio dapibus facilisis sociis natoque
+              penatibus.”
+            </p>
+            <div class="testimonials-author">
+              <div class="image">
+                <img src="./assets/images/team/team1.jpg" alt="">
+              </div>
+              <div class="bio">
+                <h3>Coriss Ambady</h3>
+                <p>Financial Analyst</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="testimonials-item">
-          <p>
-            “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
-            euismod semper. Cras justo odio dapibus facilisis sociis natoque
-            penatibus.”
-          </p>
-          <div class="testimonials-author">
-            <div class="image">
-              <img src="./assets/images/team/team1.jpg" alt="">
+          <div class="testimonials-item">
+            <p>
+              “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+              euismod semper. Cras justo odio dapibus facilisis sociis natoque
+              penatibus.”
+            </p>
+            <div class="testimonials-author">
+              <div class="image">
+                <img src="./assets/images/team/team1.jpg" alt="">
+              </div>
+              <div class="bio">
+                <h3>Coriss Ambady</h3>
+                <p>Financial Analyst</p>
+              </div>
             </div>
-            <div class="bio">
-              <h3>Coriss Ambady</h3>
-              <p>Financial Analyst</p>
+          </div>
+          <div class="testimonials-item">
+            <p>
+              “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+              euismod semper. Cras justo odio dapibus facilisis sociis natoque
+              penatibus.”
+            </p>
+            <div class="testimonials-author">
+              <div class="image">
+                <img src="./assets/images/team/team1.jpg" alt="">
+              </div>
+              <div class="bio">
+                <h3>Coriss Ambady</h3>
+                <p>Financial Analyst</p>
+              </div>
+            </div>
+          </div>
+          <div class="testimonials-item">
+            <p>
+              “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
+              euismod semper. Cras justo odio dapibus facilisis sociis natoque
+              penatibus.”
+            </p>
+            <div class="testimonials-author">
+              <div class="image">
+                <img src="./assets/images/team/team1.jpg" alt="">
+              </div>
+              <div class="bio">
+                <h3>Coriss Ambady</h3>
+                <p>Financial Analyst</p>
+              </div>
             </div>
           </div>
         </div>
