--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Proyecto Web</title>
-  <link href="./styles/normalize.css" rel="stylesheet">
   <link href="./styles/style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -121,33 +120,55 @@
                 <h3>Collect Ideas</h3>
                 <p>Nulla vitae elit libero pharetra augue dapibus.</p>
               </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="team">
-      <h2>We are proud of our design team</h2>
-      <p>Just sit back and relax while we take care of your business needs for you.</p>
-      <div class="stadistics">
-        <div class="item">
-          <img src="assets/images/team/team1.jpg" alt="">
-          <h3>1000+</h3>
-          <p>Completed Projects</p>
+      </section>
+      <section class="team">
+          <div class="container team-container">
+            <div class="info">
+        <h2>We are proud of our design team</h2>
+        <p>Just sit back and relax while we take care of your business needs for you.</p>
+            </div>
+        <div class="team-stadistics">
+          <div class="team-stadiatics-item">
+              <div class="image">
+            <img src="assets/images/check.svg" alt="">
+              </div>
+            <h3>1000+</h3>
+            <p>Completed Projects</p>
         </div>
-        <div class="item">
-          <img src="assets/images/team/team2.jpg" alt="">
-          <h3>1000+</h3>
-          <p>Completed Projects</p>
+        <div class="team-stadiatics-item">
+              <div class="image">
+          <img src="assets/images/Icon.svg" alt="">
+              </div>
+          <h3>50k</h3>
+          <p>Happy Customers</p>
         </div>
-        <div class="item">
-          <img src="assets/images/team/team3.jpg" alt="">
-          <h3>1000+</h3>
-          <p>Completed Projects</p>
+        <div class="team-stadiatics-item">
+              <div class="image">
+          <img src="assets/images/trophy.svg" alt="">
+              </div>
+          <h3>20k</h3>
+          <p>Awards Won</p>
         </div>
       </div>
       <div class="team-list">
-        <div class="item">
+        <div class="team-item">
+          <img src="assets/images/team/team4.jpg" alt="">
+          <h3>Coriss Ambady</h3>
+          <p>Financial Analyst</p>
+          <p>Fermentum massa justo sit amet risus morbi leo.</p>
+          <div class="social-networks">
+            <div class="social-item">
+              <a href="">
+                <img src="" alt="">
+              </a>
+            </div>
+          </div>
+            </div>
+            <div class="team-item">
           <img src="assets/images/team/team4.jpg" alt="">
           <h3>Coriss Ambady</h3>
           <p>Financial Analyst</p>
@@ -160,8 +181,38 @@
             </div>
           </div>
         </div>
+<div class="team-item">
+          <img src="assets/images/team/team4.jpg" alt="">
+          <h3>Coriss Ambady</h3>
+          <p>Financial Analyst</p>
+          <p>Fermentum massa justo sit amet risus morbi leo.</p>
+          <div class="social-networks">
+            <div class="social-item">
+              <a href="">
+                <img src="" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+<div class="team-item">
+          <img src="assets/images/team/team4.jpg" alt="">
+          <h3>Coriss Ambady</h3>
+          <p>Financial Analyst</p>
+          <p>Fermentum massa justo sit amet risus morbi leo.</p>
+          <div class="social-networks">
+            <div class="social-item">
+              <a href="">
+                <img src="" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        </div>
     </section>
     <section class="projects">
+        <h2>Check out some of our awesome projects with creative ideas and great design.</h2>
+        <div class="container projects-container">
       <div class="project">
         <img src="./assets/images/Projects/project1.jpg" alt="">
         <h3>Nombre del Proyecto</h3>
@@ -172,11 +223,7 @@
         <h3>Nombre del Proyecto</h3>
         <p>Categoria</p>
       </div>
-      <div class="project">
-        <img src="./assets/images/Projects/Project3.jpg" alt="">
-        <h3>Nombre del Proyecto</h3>
-        <p>Categoria</p>
-      </div>
+              </div>
     </section>
     <section class="testimonials">
       <div class="container ">
@@ -281,21 +328,50 @@
         </div>
       </div>
     </section>
-    <section class="faq">
-      <h2>If you don't see an answer to your question, you can send us an email from our contact form.</h2>
+    <section class="faqs">
+        <div class="container faqs-container">
+          <div class="left">
+      <h1>If you don't see an answer to your question, you can send us an email from our contact form.</h2>
       <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam quis
         risus eget urna mollis ornare.</p>
       <a class="btn-primary" href="">All FAQ</a>
-      <div class="list">
-        <div class="item">
-          <p>How do I get my subscription receipt?</p>
+          </div>
+      <div class="right">
+      <div class="faqs-list">
+        <div class="faqs-item">
+                <details>
+                  <summary>How do I get my subscription receipt?</summary>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis impedit itaque repellendus. Architecto, similique repellendus.</p>
+                </details>
+        </div>
+        <div class="faqs-item">
+                <details>
+                  <summary>Are there any discounts for people in need?</summary>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis impedit itaque repellendus. Architecto, similique repellendus.</p>
+                </details>
+        </div>
+        <div class="faqs-item">
+                <details>
+                  <summary>Do you offer a free trial edit?</summary>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis impedit itaque repellendus. Architecto, similique repellendus.</p>
+                </details>
+        </div>
+        <div class="faqs-item">
+                <details>
+                  <summary>How do I reset my Account password?</summary>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis impedit itaque repellendus. Architecto, similique repellendus.</p>
+                </details>
         </div>
       </div>
+          </div>
+        </div>
     </section>
   </main>
   <footer>
+      <div class="container footer-container">
     <h2>Join our community by using our services and grow your business.</h2>
     <a class="btn-primary" href="">Try It For Free</a>
+      </div>
   </footer>
 </body>
 
