Add JSON server package to serve JSON data and display it in HTML
- Integrated a JSON server package to manage and serve JSON data.
- Implemented functionality in JavaScript to fetch and display information from a JSON file within the HTML.

--- a/src/index.html
+++ b/src/index.html
@@ -54,32 +54,7 @@
     <section class="services">
       <div class="container">
         <h2>The service we offer is specifically designed to meet your needs.</h2>
-        <div class="services-list">
-          <div class="services-item">
-            <img src="assets/images/services/service1.png" alt="">
-            <h3>Web Design</h3>
-            <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget. Fusce dapibus
-              tellus.a
-            </p>
-            <a href="">Learn More</a>
-          </div>
-          <div class="services-item">
-            <img src="assets/images/services/service2.png" alt="">
-            <h3>Web Design</h3>
-            <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget. Fusce dapibus
-              tellus.a
-            </p>
-            <a href="">Learn More</a>
-          </div>
-          <div class="services-item">
-            <img src="assets/images/services/service3.png" alt="">
-            <h3>Web Design</h3>
-            <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget. Fusce dapibus
-              tellus.a
-            </p>
-            <a href="">Learn More</a>
-          </div>
-        </div>
+        <div class="services-list"></div>
       </div>
     </section>
     <section class="strategy">
@@ -376,4 +351,5 @@
   </footer>
 </body>
 
+      <script src="js/index.js"></script>
 </html>
