--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <div class="logo">
           <img src="assets/images/logo.png" alt="">
         </div>
-          <span>Menu</span>
+        <span class="btn-nav" id="btn-menu">Menu</span>
         <ul>
           <li><a href="/">Demos</a></li>
           <li><a href="/">Pages</a></li>
@@ -27,6 +27,7 @@
           <li><a href="/">Blog</a></li>
           <li><a href="/">Blocks</a></li>
           <li><a href="/">Documentacion</a></li>
+          <span class="btn-nav" id="btn-close">close</span>
         </ul>
       </div>
     </nav>
@@ -96,110 +97,110 @@
                 <h3>Collect Ideas</h3>
                 <p>Nulla vitae elit libero pharetra augue dapibus.</p>
               </div>
-              </div>
             </div>
           </div>
-        </div>
-      </section>
-      <section class="team">
-          <div class="container team-container">
-            <div class="info">
-        <h2>We are proud of our design team</h2>
-        <p>Just sit back and relax while we take care of your business needs for you.</p>
-            </div>
-        <div class="team-stadistics">
-          <div class="team-stadiatics-item">
-              <div class="image">
-            <img src="assets/images/check.svg" alt="">
-              </div>
-            <h3>1000+</h3>
-            <p>Completed Projects</p>
-        </div>
-        <div class="team-stadiatics-item">
-              <div class="image">
-          <img src="assets/images/Icon.svg" alt="">
-              </div>
-          <h3>50k</h3>
-          <p>Happy Customers</p>
-        </div>
-        <div class="team-stadiatics-item">
-              <div class="image">
-          <img src="assets/images/trophy.svg" alt="">
-              </div>
-          <h3>20k</h3>
-          <p>Awards Won</p>
         </div>
       </div>
-      <div class="team-list">
-        <div class="team-item">
-          <img src="assets/images/team/team4.jpg" alt="">
-          <h3>Coriss Ambady</h3>
-          <p>Financial Analyst</p>
-          <p>Fermentum massa justo sit amet risus morbi leo.</p>
-          <div class="social-networks">
-            <div class="social-item">
-              <a href="">
-                <img src="" alt="">
-              </a>
+    </section>
+    <section class="team">
+      <div class="container team-container">
+        <div class="info">
+          <h2>We are proud of our design team</h2>
+          <p>Just sit back and relax while we take care of your business needs for you.</p>
+        </div>
+        <div class="team-stadistics">
+          <div class="team-stadiatics-item">
+            <div class="image">
+              <img src="assets/images/check.svg" alt="">
             </div>
+            <h3>1000+</h3>
+            <p>Completed Projects</p>
           </div>
+          <div class="team-stadiatics-item">
+            <div class="image">
+              <img src="assets/images/Icon.svg" alt="">
             </div>
-            <div class="team-item">
-          <img src="assets/images/team/team4.jpg" alt="">
-          <h3>Coriss Ambady</h3>
-          <p>Financial Analyst</p>
-          <p>Fermentum massa justo sit amet risus morbi leo.</p>
-          <div class="social-networks">
-            <div class="social-item">
-              <a href="">
-                <img src="" alt="">
-              </a>
+            <h3>50k</h3>
+            <p>Happy Customers</p>
+          </div>
+          <div class="team-stadiatics-item">
+            <div class="image">
+              <img src="assets/images/trophy.svg" alt="">
             </div>
+            <h3>20k</h3>
+            <p>Awards Won</p>
           </div>
         </div>
-<div class="team-item">
-          <img src="assets/images/team/team4.jpg" alt="">
-          <h3>Coriss Ambady</h3>
-          <p>Financial Analyst</p>
-          <p>Fermentum massa justo sit amet risus morbi leo.</p>
-          <div class="social-networks">
-            <div class="social-item">
-              <a href="">
-                <img src="" alt="">
-              </a>
+        <div class="team-list">
+          <div class="team-item">
+            <img src="assets/images/team/team4.jpg" alt="">
+            <h3>Coriss Ambady</h3>
+            <p>Financial Analyst</p>
+            <p>Fermentum massa justo sit amet risus morbi leo.</p>
+            <div class="social-networks">
+              <div class="social-item">
+                <a href="">
+                  <img src="" alt="">
+                </a>
+              </div>
             </div>
           </div>
-        </div>
-<div class="team-item">
-          <img src="assets/images/team/team4.jpg" alt="">
-          <h3>Coriss Ambady</h3>
-          <p>Financial Analyst</p>
-          <p>Fermentum massa justo sit amet risus morbi leo.</p>
-          <div class="social-networks">
-            <div class="social-item">
-              <a href="">
-                <img src="" alt="">
-              </a>
+          <div class="team-item">
+            <img src="assets/images/team/team4.jpg" alt="">
+            <h3>Coriss Ambady</h3>
+            <p>Financial Analyst</p>
+            <p>Fermentum massa justo sit amet risus morbi leo.</p>
+            <div class="social-networks">
+              <div class="social-item">
+                <a href="">
+                  <img src="" alt="">
+                </a>
+              </div>
             </div>
           </div>
-        </div>
+          <div class="team-item">
+            <img src="assets/images/team/team4.jpg" alt="">
+            <h3>Coriss Ambady</h3>
+            <p>Financial Analyst</p>
+            <p>Fermentum massa justo sit amet risus morbi leo.</p>
+            <div class="social-networks">
+              <div class="social-item">
+                <a href="">
+                  <img src="" alt="">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="team-item">
+            <img src="assets/images/team/team4.jpg" alt="">
+            <h3>Coriss Ambady</h3>
+            <p>Financial Analyst</p>
+            <p>Fermentum massa justo sit amet risus morbi leo.</p>
+            <div class="social-networks">
+              <div class="social-item">
+                <a href="">
+                  <img src="" alt="">
+                </a>
+              </div>
+            </div>
+          </div>
 
         </div>
     </section>
     <section class="projects">
-        <h2>Check out some of our awesome projects with creative ideas and great design.</h2>
-        <div class="container projects-container">
-      <div class="project">
-        <img src="./assets/images/Projects/project1.jpg" alt="">
-        <h3>Nombre del Proyecto</h3>
-        <p>Categoria</p>
+      <h2>Check out some of our awesome projects with creative ideas and great design.</h2>
+      <div class="container projects-container">
+        <div class="project">
+          <img src="./assets/images/Projects/project1.jpg" alt="">
+          <h3>Nombre del Proyecto</h3>
+          <p>Categoria</p>
+        </div>
+        <div class="project">
+          <img src="./assets/images/Projects/project2.jpg" alt="">
+          <h3>Nombre del Proyecto</h3>
+          <p>Categoria</p>
+        </div>
       </div>
-      <div class="project">
-        <img src="./assets/images/Projects/project2.jpg" alt="">
-        <h3>Nombre del Proyecto</h3>
-        <p>Categoria</p>
-      </div>
-              </div>
     </section>
     <section class="testimonials">
       <div class="container ">
@@ -305,51 +306,61 @@
       </div>
     </section>
     <section class="faqs">
-        <div class="container faqs-container">
-          <div class="left">
-      <h1>If you don't see an answer to your question, you can send us an email from our contact form.</h2>
-      <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam quis
-        risus eget urna mollis ornare.</p>
-      <a class="btn-primary" href="">All FAQ</a>
+      <div class="container faqs-container">
+        <div class="left">
+          <h1>If you don't see an answer to your question, you can send us an email from our contact form.</h2>
+            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam
+              quis
+              risus eget urna mollis ornare.</p>
+            <a class="btn-primary" href="">All FAQ</a>
+        </div>
+        <div class="right">
+          <div class="faqs-list">
+            <div class="faqs-item">
+              <details>
+                <summary>How do I get my subscription receipt?</summary>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem
+                  deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis
+                  impedit itaque repellendus. Architecto, similique repellendus.</p>
+              </details>
+            </div>
+            <div class="faqs-item">
+              <details>
+                <summary>Are there any discounts for people in need?</summary>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem
+                  deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis
+                  impedit itaque repellendus. Architecto, similique repellendus.</p>
+              </details>
+            </div>
+            <div class="faqs-item">
+              <details>
+                <summary>Do you offer a free trial edit?</summary>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem
+                  deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis
+                  impedit itaque repellendus. Architecto, similique repellendus.</p>
+              </details>
+            </div>
+            <div class="faqs-item">
+              <details>
+                <summary>How do I reset my Account password?</summary>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem
+                  deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis
+                  impedit itaque repellendus. Architecto, similique repellendus.</p>
+              </details>
+            </div>
           </div>
-      <div class="right">
-      <div class="faqs-list">
-        <div class="faqs-item">
-                <details>
-                  <summary>How do I get my subscription receipt?</summary>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis impedit itaque repellendus. Architecto, similique repellendus.</p>
-                </details>
-        </div>
-        <div class="faqs-item">
-                <details>
-                  <summary>Are there any discounts for people in need?</summary>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis impedit itaque repellendus. Architecto, similique repellendus.</p>
-                </details>
-        </div>
-        <div class="faqs-item">
-                <details>
-                  <summary>Do you offer a free trial edit?</summary>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis impedit itaque repellendus. Architecto, similique repellendus.</p>
-                </details>
-        </div>
-        <div class="faqs-item">
-                <details>
-                  <summary>How do I reset my Account password?</summary>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim saepe corrupti accusamus! Quidem deserunt, aliquid placeat neque consectetur expedita recusandae distinctio explicabo reiciendis impedit itaque repellendus. Architecto, similique repellendus.</p>
-                </details>
         </div>
       </div>
-          </div>
-        </div>
     </section>
   </main>
   <footer>
-      <div class="container footer-container">
-    <h2>Join our community by using our services and grow your business.</h2>
-    <a class="btn-primary" href="">Try It For Free</a>
-      </div>
+    <div class="container footer-container">
+      <h2>Join our community by using our services and grow your business.</h2>
+      <a class="btn-primary" href="">Try It For Free</a>
+    </div>
   </footer>
 </body>
 
-      <script src="js/index.js"></script>
+<script src="js/index.js"></script>
+
 </html>
