--- a/src/index.html
+++ b/src/index.html
@@ -205,104 +205,7 @@
     <section class="testimonials">
       <div class="container ">
         <h2>Don't take our word for it. See what customers are saying about us.</h2>
-        <div class="testimonials-list">
-          <div class="testimonials-item">
-            <p>
-              “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
-              euismod semper. Cras justo odio dapibus facilisis sociis natoque
-              penatibus.”
-            </p>
-            <div class="testimonials-author">
-              <div class="image">
-                <img src="./assets/images/team/team1.jpg" alt="">
-              </div>
-              <div class="bio">
-                <h3>Coriss Ambady</h3>
-                <p>Financial Analyst</p>
-              </div>
-            </div>
-          </div>
-          <div class="testimonials-item">
-            <p>
-              “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
-              euismod semper. Cras justo odio dapibus facilisis sociis natoque
-              penatibus.”
-            </p>
-            <div class="testimonials-author">
-              <div class="image">
-                <img src="./assets/images/team/team1.jpg" alt="">
-              </div>
-              <div class="bio">
-                <h3>Coriss Ambady</h3>
-                <p>Financial Analyst</p>
-              </div>
-            </div>
-          </div>
-          <div class="testimonials-item">
-            <p>
-              “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
-              euismod semper. Cras justo odio dapibus facilisis sociis natoque
-              penatibus.”
-            </p>
-            <div class="testimonials-author">
-              <div class="image">
-                <img src="./assets/images/team/team1.jpg" alt="">
-              </div>
-              <div class="bio">
-                <h3>Coriss Ambady</h3>
-                <p>Financial Analyst</p>
-              </div>
-            </div>
-          </div>
-          <div class="testimonials-item">
-            <p>
-              “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
-              euismod semper. Cras justo odio dapibus facilisis sociis natoque
-              penatibus.”
-            </p>
-            <div class="testimonials-author">
-              <div class="image">
-                <img src="./assets/images/team/team1.jpg" alt="">
-              </div>
-              <div class="bio">
-                <h3>Coriss Ambady</h3>
-                <p>Financial Analyst</p>
-              </div>
-            </div>
-          </div>
-          <div class="testimonials-item">
-            <p>
-              “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
-              euismod semper. Cras justo odio dapibus facilisis sociis natoque
-              penatibus.”
-            </p>
-            <div class="testimonials-author">
-              <div class="image">
-                <img src="./assets/images/team/team1.jpg" alt="">
-              </div>
-              <div class="bio">
-                <h3>Coriss Ambady</h3>
-                <p>Financial Analyst</p>
-              </div>
-            </div>
-          </div>
-          <div class="testimonials-item">
-            <p>
-              “Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis
-              euismod semper. Cras justo odio dapibus facilisis sociis natoque
-              penatibus.”
-            </p>
-            <div class="testimonials-author">
-              <div class="image">
-                <img src="./assets/images/team/team1.jpg" alt="">
-              </div>
-              <div class="bio">
-                <h3>Coriss Ambady</h3>
-                <p>Financial Analyst</p>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="testimonials-list"></div>
       </div>
     </section>
     <section class="faqs">
